prevent horizontal overflow

--- a/styles.css
+++ b/styles.css
@@ -10,6 +10,12 @@ html {
     font-family: Poppins, sans-serif;
     font-size: 20px;
     line-height: 1/5;
+    overflow-x: hidden;
+}
+
+body {
+    overflow-x: hidden;
+    width: 100%;
 }
 
 h1 {
